--- a/index.css
+++ b/index.css
@@ -913,6 +913,16 @@ input {
     /* left: 90px; */
     /* letter-spacing: 10px; */
   }
+  .wrapper_logo {
+    display: flex;
+    flex-direction: row;
+    width: 200px;
+    height: 20px;
+    border-color: 2px black;
+    /* background: chartreuse; */
+    justify-content: center;
+    /* grid-template-columns: repeat(6, 1fr); */
+  }
 }
 /* ------------------------skills--------------- */
 
@@ -951,7 +961,7 @@ input {
   display: flex;
   flex-direction: row;
   width: 200px;
-  height: 90px;
+  height: 50px;
   border-color: 2px black;
   /* background: chartreuse; */
   justify-content: center;
@@ -968,7 +978,8 @@ input {
 .wrp {
   display: flex;
   flex-direction: row;
-  margin: 20px;
+  /* margin: 20px; */
+  margin: 3em;
 }
 /* -----------------------footer------------------- */
 
