--- a/index.css
+++ b/index.css
@@ -290,6 +290,9 @@ input {
   span.cancel:before {
     content: "\f00d";
   }
+  /* html {
+    font-size: 65%;
+  } */
 }
 .content {
   z-index: -1;
@@ -920,7 +923,7 @@ input {
     height: 0px;
     border-color: 2px black;
     /* background: chartreuse; */
-    justify-content: center;
+    justify-content: space-between;
     /* grid-template-columns: repeat(6, 1fr); */
   }
 }
@@ -932,9 +935,10 @@ input {
 }
 .skills h1 {
   text-align: center;
-  font-size: 8em;
-  font-weight: 100;
-  letter-spacing: 3px;
+  font-size: 5em;
+  /* font-weight: 100; */
+  letter-spacing: 1px;
+  padding-top: 1em;
 
   /* text-shadow: 2px 2px 5px red; */
 }
@@ -953,8 +957,8 @@ input {
 .wrapperr {
   display: flex;
   flex-wrap: wrap;
-  padding: 0em -1em 4em 4em;
-  margin: 5em;
+  /* padding: 0em -1em 4em 4em; */
+  /* margin: 1em; */
 }
 
 .wrapper_logo {
@@ -964,7 +968,7 @@ input {
   height: 20px;
   border-color: 2px black;
   /* background: chartreuse; */
-  justify-content: center;
+  justify-content: space-between;
   /* grid-template-columns: repeat(6, 1fr); */
 }
 .wrapper_logo h3 {
@@ -1100,4 +1104,122 @@ input {
   100% {
     background-position-x: -1000px;
   }
+}
+
+/* -----------------------carousel-------------------- */
+
+.slidePic {
+  margin: auto;
+  padding-top: 6em;
+}
+.slidePic h1 {
+  text-align: center;
+}
+.slidePic h2 {
+  text-align: center;
+  font-size: 4em;
+  margin: auto;
+}
+.cards {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.card {
+  width: 20%;
+  height: auto;
+
+  margin: 2em;
+  border-radius: 10px;
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(1px);
+
+  justify-content: space-evenly;
+
+  border: 4px solid #fff;
+  box-shadow: 1px 1px 15px #ccc;
+}
+.card {
+}
+.position {
+  text-align: center;
+  padding-bottom: 20px;
+}
+.heading {
+  text-align: justify;
+
+  padding: 10px 0px 40px 0px;
+}
+
+@media (max-width: 500px) {
+  .slidePic {
+    margin: auto;
+    padding-top: 6em;
+  }
+  .slidePic h1 {
+    text-align: center;
+  }
+  .slidePic h2 {
+    text-align: center;
+    font-size: 2.4em;
+    margin: auto;
+  }
+  .cards {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+  .card {
+    width: auto;
+    height: 60%;
+    background-color: red;
+    margin: 2em;
+    border-radius: 10px;
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(1px);
+
+    /* border: 1px solid rgba(255, 255, 255, 0.18); */
+  }
+
+  .card:hover {
+    color: black;
+  }
+
+  .position {
+    text-align: center;
+    padding-bottom: 30px;
+  }
+  .heading {
+    text-align: justify;
+
+    padding: 10px 0px 40px 0px;
+  }
+
+  .blog {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+}
+
+.blog {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.blog-entry {
+  border: 4px solid #fff;
+  box-shadow: 1px 1px 15px #ccc;
+  width: 20em;
+  height: 17em;
+  margin: 10px;
+}
+.blog-entry a img {
+  width: auto;
+}
+
+section h1 {
+  font-size: 2em;
 }
