--- a/index.css
+++ b/index.css
@@ -1139,8 +1139,13 @@ input {
 
   border: 4px solid #fff;
   box-shadow: 1px 1px 15px #ccc;
+
+  transition: width 3s, height 3s, transform 3s;
 }
-.card {
+.card:hover {
+  width: 20%;
+  height: auto;
+  transform: rotate(360deg);
 }
 .position {
   text-align: center;
@@ -1223,3 +1228,5 @@ input {
 section h1 {
   font-size: 2em;
 }
+
+/* ----------------exppppppp */
