--- a/index.css
+++ b/index.css
@@ -39,7 +39,7 @@ labell {
   position: absolute;
   width: 60px;
   height: 35px;
-  left: 20px;
+  left: 40px;
   top: 100px;
   border: 2px solid;
   border-radius: 20px;
@@ -130,6 +130,7 @@ body.night {
 
 nav {
   /* background: #1b1b1b; */
+
   background: black;
 }
 nav:after {
@@ -222,6 +223,11 @@ input {
   margin-left: 40px;
 }
 @media all and (max-width: 968px) {
+  nav {
+    /* background: #1b1b1b; */
+    /* width: 26em; */
+    background: black;
+  }
   nav ul {
     margin-right: 0px;
     float: left;
@@ -305,40 +311,6 @@ input {
 
 /* ----------------ABOUT ME-------------- */
 
-/* .np h1 {
-  font-size: 5.5em;
-  padding-left: 4em;
-  
-  padding-top: 1.3em;
-}
-
-.about {
-  
-}
-
-.demo {
-  width: 20%;
-  height: auto;
-  
-  position: relative;
-  
-  top: 6rem;
-}
-
-.text1 {
-  width: 55em;
-  border: 1px white;
-  position: relative;
-  top: -10em;
-  
-}
-.text2 {
-  word-wrap: break-word;
-
-  padding-inline-start: 20.3em;
-} */
-.dp {
-}
 .demo {
   width: 95%;
   height: auto;
@@ -478,6 +450,101 @@ input {
   }
 }
 
+/* -----------------------------------new------------------------ */
+.iconss {
+  display: flex;
+  flex-direction: column;
+}
+
+.iconn {
+  margin: 1em;
+  /* color: #000; */
+}
+
+.iconn:hover {
+  transform: scale(2, 2);
+}
+
+.name h1 {
+  /* background: url(bg-6.jpg);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; */
+
+  font-size: 7em;
+  font-weight: 1000;
+  /* color: white; */
+  /* text-shadow: 2px 2px 4px #000000; */
+}
+
+.home {
+  display: flex;
+  /* flex-direction: column; */
+  /* padding-top: 15em; */
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.container {
+  padding-top: 15em;
+  display: flex;
+  justify-content: space-between;
+}
+
+.title h1 {
+  font-size: 5em;
+  opacity: 0.1;
+  font-weight: 800;
+}
+
+.title h4 {
+  position: relative;
+  font-weight: 400;
+  font-size: 4em;
+  top: -1em;
+}
+
+.title p {
+  /* font-size: 1.5em; */
+  word-wrap: justify;
+}
+
+@media (max-width: 600px) {
+  .name h1 {
+    font-size: 6em;
+    overflow-wrap: break-word;
+  }
+  .home {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  .iconss {
+    display: flex;
+    flex-direction: row;
+    padding-top: 2em;
+  }
+
+  .container {
+    padding-top: 1em;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .title h1 {
+    font-size: 4em;
+    opacity: 0.1;
+    font-weight: 800;
+  }
+
+  .title h4 {
+    position: relative;
+    font-weight: 400;
+    font-size: 2.4em;
+    top: -1.2em;
+  }
+}
+/* -----------------------------------new------------------------ */
+
 /* -------------------icon--------------- */
 .wrapper {
   display: inline-flex;
@@ -583,7 +650,7 @@ input {
 .btn {
   border: 1px solid #3498db;
   background: none;
-  padding: 10px 20px;
+  padding: 40px 20px;
   font-size: 20px;
   font-family: "montserrat";
   cursor: pointer;
@@ -639,6 +706,8 @@ input {
 
 .education {
   letter-spacing: 2px;
+  position: relative;
+  top: -12px;
 }
 .crossway {
   /* color: black; */
@@ -704,8 +773,10 @@ input {
 .child {
   /* border: 5px solid black; */
   width: 550px;
+  /* width: 450px; */
   margin: 10px 100px;
 }
+
 .detail {
   width: 30em;
   border: 1px white;
@@ -764,6 +835,13 @@ input {
     /* left: 90px; */
     letter-spacing: 10px;
   }
+
+  .child {
+    /* border: 5px solid black; */
+    width: 450px;
+    /* width: 450px; */
+    margin: 0px 10px;
+  }
 }
 
 .edu h1 {
@@ -816,11 +894,7 @@ input {
     display: flex;
     flex-direction: column;
   }
-  .child {
-    /* border: 5px solid black; */
-    width: 550px;
-    margin: 0px 10px 0px 10px;
-  }
+
   .detail p {
     font-size: 1em;
     text-align: justify;
@@ -1218,7 +1292,7 @@ input {
   border: 4px solid #fff;
   box-shadow: 1px 1px 15px #ccc;
   width: 20em;
-  height: 17em;
+
   margin: 10px;
 }
 .blog-entry a img {
@@ -1230,3 +1304,91 @@ section h1 {
 }
 
 /* ----------------exppppppp */
+.containerr {
+  display: flex;
+  overflow-x: auto;
+  scroll-snap-type: x proximity;
+}
+
+.chilld {
+  /* ----------decide gap betn two cards--- */
+  width: auto;
+  height: auto;
+
+  /* background-color: yellow; */
+  /* border: 10x solid black; */
+
+  scroll-snap-align: center;
+}
+
+.chilld img {
+  width: auto;
+  height: 15em;
+  margin: 2rem;
+  /* margin: 2em 0em 1em 4em; */
+  /* align-items: center; */
+}
+
+.chilld:hover {
+  /* transform: rotate(25); */
+  /* transform: rotate(360deg); */
+  /* margin: 2em 0em 1em 4em; */
+  /* border-radius: 50%; */
+}
+.info img {
+  align-items: center;
+  padding-left: 1em;
+}
+.children {
+  background-color: #ffe194;
+  width: 26rem;
+  margin: 1em;
+
+  border-radius: 8%;
+}
+
+.children img {
+  /* align-items: center; */
+
+  margin: 1em;
+}
+
+.children h2 {
+  text-align: center;
+  padding-bottom: 1em;
+}
+
+/* ---------------------------customize bar------------------- */
+/* width */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: red;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: red;
+  background: #3498db;
+}
+
+/* ------------titling-------------------- */
+.titling h2 {
+  font-size: 6em;
+}
+@media (max-width: 500px) {
+  .titling h2 {
+    font-size: 3.4em;
+    top: -1.4em;
+  }
+}
