--- a/projects.css
+++ b/projects.css
@@ -55,142 +55,111 @@ body {
   }
 }
 /* ----------------arooww----------------- */
-section {
-  position: absolute;
-  background: #2abbff;
-  /* width: 130%;
-    height: calc(100% - 200px); */
-  width: 100%;
-  height: calc(100% - 200px);
-}
-
-section .curve {
-  position: absolute;
-  transform-origin: top;
-  /* bottom: -198px;
-    height: 200px;
-    width: 90%; */
-  bottom: -196px;
-  height: 200px;
-  width: 100%;
-}
-
-section .curve img {
-  /* width: 90%; */
-  width: 100%;
-  height: 100%;
-}
-
-.title h1 {
-  color: white;
-  text-align: center;
-  font-size: 12em;
-  padding-top: 1.2em;
-  /* letter-spacing: 5px; */
-  /* transform: translate(-50%, -50%); */
-  position: absolute;
-}
-
-.title {
+section{
   position: relative;
-  padding-left: 15em;
+  width: auto;
+  height: 90vh;
+  overflow: hidden;
 }
 
-.title h1:nth-child(1) {
-  color: transparent;
-  -webkit-text-stroke: 2px white;
-  /* animation: animate 4s ease-in-out infinite; */
+section .scroll{
+  width: auto;
+  display: flex;
 }
-.title h1:nth-child(2) {
+
+section .scroll div{
   color: white;
+  font-size: 8em;
+  /* background-color: #fff; */
 
-  animation: animate 2s ease-in-out infinite;
+  /* this will continue the line  */
+  white-space: nowrap;
+  font-weight: 900;
+  text-transform: uppercase;
+  animation: animate 40s linear infinite;
+  animation-delay: -40s;
+}
+
+section .scroll div span{
+
+  -webkit-text-stroke: 2px white;
+color: transparent;
 }
 
 @keyframes animate {
-  0%,
-  100% {
-    /* clip-path: polygon(
-      0 82%,
-      6% 78%,
-      24% 76%,
-      39% 83%,
-      57% 86%,
-      71% 79%,
-      82% 77%,
-      93% 81%,
-      100% 89%,
-      100% 99%,
-      0% 99%
-    ); */
-    clip-path: polygon(
-      2% 97%,
-      2% 99%,
-      15% 91%,
-      28% 90%,
-      42% 94%,
-      54% 93%,
-      69% 90%,
-      84% 87%,
-      95% 90%,
-      100% 94%,
-      100% 100%
-    );
+  
+  0%{
+      transform: translateX(100%);
   }
 
-  50% {
-    /* clip-path: polygon(
-      0 76%,
-      18% 78%,
-      39% 83%,
-      63% 82%,
-      79% 78%,
-      100% 83%,
-      100% 99%,
-      0% 99%
-    ); */
-    clip-path: polygon(
-      0% 88%,
-      7% 82%,
-      19% 77%,
-      29% 78%,
-      43% 84%,
-      54% 86%,
-      64% 82%,
-      77% 75%,
-      85% 79%,
-      95% 86%,
-      100% 91%,
-      100% 99%,
-      0% 100%
-    );
+  100%{
+      transform: translateX(-100%);
   }
 }
 
-@media (max-width: 500px) {
-  .title {
-    position: relative;
-    padding-left: 1em;
+@keyframes animate1 {
+  
+  0%{
+      transform: translateX(0%);
   }
-
-  .title h1 {
-    color: white;
-    text-align: center;
-    font-size: 3.8em;
-    padding-top: 4.5em;
-    /* letter-spacing: 5px; */
-    /* transform: translate(-50%, -50%); */
-    position: absolute;
-    left: 40px;
-  }
-  .all {
-    padding-top: 45em;
+  
+  100%{
+      transform: translateX(-200%);
   }
 }
 
+section .scroll div:nth-child(2){
+  animation: animate1 40s linear infinite;
+animation-delay: -20s ;
+}
+
+
+section .scroll.text1{
+  transform: rotate(70deg) translateY(0px) translateX(-200px);
+}
+section .scroll.text2{
+  transform: rotate(35deg) translateY(100px) translateX(-200px);
+}
+
+section .scroll.text3{
+  transform: rotate(25deg) translateY(220px) translateX(-200px);
+}
+section .scroll.text4{
+  transform: rotate(-40deg) translateY(-10px) translateX(-400px);
+} 
+
+@media only screen and (max-width: 400px) {
+  
+  section .scroll div{
+      color: fff;
+      font-size: 4em;
+      /* background-color: #fff; */
+  
+      /* this will continue the line  */
+      white-space: nowrap;
+      font-weight: 900;
+      text-transform: uppercase;
+      animation: animate 40s linear infinite;
+      animation-delay: -40s;
+  }
+  section .scroll.text1{
+      transform: rotate(70deg) translateY(0px) translateX(-200px);
+  }
+   section .scroll.text2{
+      transform: rotate(30deg) translateY(100px) translateX(-200px);
+  }
+  
+  section .scroll.text3{
+      transform: rotate(55deg) translateY(220px) translateX(-200px);
+  }
+  section .scroll.text4{
+      transform: rotate(-20deg) translateY(-10px) translateX(-200px);
+  } 
+}
+/* ===demo=== */
 /* -------------------all------------------ */
 .all {
-  padding-top: 48em;
+  margin-top: 4em;
 }
 
 .btnn {
